name:                mossy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/mossy#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mossy
                     , Mossy.Codegen
                     , Mossy.Emit
                     , Mossy.Eval
                     , Mossy.JIT
                     , Mossy.Parser
                     , Mossy.Pretty
                     , Mossy.Syntax
                     , Mossy.Type
                     , Mossy.TypeCheck
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , haskeline >= 0.7
                     , llvm-hs >= 5.1
                     , llvm-hs-pure >= 5.1
                     , mtl
                     , parsec >= 3.1
                     , pretty >= 1.1
                     , prettyclass >= 1.0
                     , language-glsl >= 0.2
                     , template-haskell >= 2.12
  default-language:    Haskell2010


executable mossy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mossy
  default-language:    Haskell2010

test-suite mossy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mossy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/mossy
